--- a/Views/Hello/List.cshtml
+++ b/Views/Hello/List.cshtml
@@ -1,18 +1,10 @@
 ﻿@model IEnumerable<MvcDemo.Models.Course>
 
 @{
-    Layout = null;
+   //  Layout = "~/Views/Shared/common.cshtml";
+    ViewBag.Title = "List Of Courses";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>List Of Courses</title>
-</head>
-<body>
-   
+    <h2>List Of Courses</h2>
     <table border="1" style="width:100%">
         <tr>
             <th>
@@ -36,5 +28,4 @@
     }
     
     </table>
-</body>
-</html>
+
