--- a/Views/Hello/Index.cshtml
+++ b/Views/Hello/Index.cshtml
@@ -11,6 +11,10 @@
     <title>Index</title>
 </head>
 <body>
-    <h2>Hello! </h2>
+    <h2>Hello!</h2>
+    @{
+        var msg = "Tag for line is <hr>";
+        @msg
+    }
 </body>
 </html>
